Make header fixed to top of screen as page is scrolled, and fix layout issues across all pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,9 +37,16 @@ p {
 }
 
 /* header*/
+/* #header {
+    position: fixed;
+    z-index: 100;
+} */
 
 header {
+    width: 100%;
     background-color: var(--pink);
+    position: fixed;
+    z-index: 100;
 }
 
 #logo {
@@ -70,6 +77,7 @@ header {
 
 #hero-outer {
     position: relative;
+    padding-top: 95px;
 }
 
 #cover-text {
@@ -191,9 +199,11 @@ header {
 
 #contact-us-para {
     width: 75%;
-    padding-bottom: 100px;
+    padding-bottom: 50px;
+    padding-top: 100px;
     margin: 25px auto;
-    text-align: center
+    text-align: center;
+    border-top: solid var(--dim-grey) 2px;
 }
 
 
